--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,12 +1,13 @@
 /* Import Scss Files */
 
-@import url('https://fonts.googleapis.com/css?family=Cairo&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Tajawal:500&display=swap');
 @import '../sass/vars';
 @import '../sass/mixins';
 @import '../sass/helpers';
+@import '../sass/transtions';
 @import '../sass/theme';
 @import '../sass/theme-dark';
 @import '../sass/responsive';
 *{
-    font-family: 'Cairo', sans-serif;
+    font-family: 'Tajawal', sans-serif;
 }
