--- a/assets/sass/_theme.scss
+++ b/assets/sass/_theme.scss
@@ -51,33 +51,6 @@ html {
     animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-@-webkit-keyframes scale-in-center {
-    0% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        opacity: 1;
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        opacity: 1;
-    }
-}
-
-@keyframes scale-in-center {
-    0% {
-        -webkit-transform: scale(0);
-        transform: scale(0);
-        opacity: 1;
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-        opacity: 1;
-    }
-}
 
 i {
     vertical-align: middle;
@@ -189,7 +162,7 @@ i {
 }
 
 .header {
-    background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(120, 50, 255, 1) 0%, rgba(50, 150, 250, 1) 91%);
+    background-image:linear-gradient(109.6deg, #4148cf 21.2%, #5061d8 73.1%);
     width: 100%;
     color: $light-color;
     height: 70px;
@@ -220,11 +193,23 @@ i {
         font-weight: bold;
         letter-spacing: 2px;
         color: $light-color;
+        .atfrg-logo{
+            height: 80px;
+            padding: 8px;
+            margin-top: -2px;
+        }
     }
 
     .nav-item {
         a {
             color: $light-color;
+            font-size: 1.3rem;
+            svg{
+                fill: #fff;
+                height: 1.7rem;
+                margin-left: 6px;
+                vertical-align: middle;
+            }
         }
     }
 
@@ -232,6 +217,9 @@ i {
         a {
             color: $primary-color;
             font-weight: bold;
+            svg{
+                fill: $primary-color;
+            }
         }
     }
 
@@ -242,11 +230,17 @@ i {
             color: $primary-color !important;
             @include transition(0.3s);
         }
+        &:hover svg{
+                fill: $primary-color;
+        }
     }
 
     .navbar-nav {
         .nuxt-link-active {
             color: $primary-color !important;
+            svg{
+                fill: $primary-color;
+            }
         }
     }
 
@@ -477,33 +471,6 @@ i {
     }
 }
 
-@-webkit-keyframes slide-in-fwd-center {
-    0% {
-        -webkit-transform: translateZ(-1400px);
-        transform: translateZ(-1400px);
-        opacity: 0;
-    }
-
-    100% {
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
-        opacity: 1;
-    }
-}
-
-@keyframes slide-in-fwd-center {
-    0% {
-        -webkit-transform: translateZ(-1400px);
-        transform: translateZ(-1400px);
-        opacity: 0;
-    }
-
-    100% {
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
-        opacity: 1;
-    }
-}
 
 .Slider-block {
     margin: 30px auto;
@@ -701,41 +668,6 @@ i {
     }
 }
 
-@-webkit-keyframes swing-in-top-fwd {
-    0% {
-        -webkit-transform: rotateX(-100deg);
-        transform: rotateX(-100deg);
-        -webkit-transform-origin: top;
-        transform-origin: top;
-        opacity: 0;
-    }
-
-    100% {
-        -webkit-transform: rotateX(0deg);
-        transform: rotateX(0deg);
-        -webkit-transform-origin: top;
-        transform-origin: top;
-        opacity: 1;
-    }
-}
-
-@keyframes swing-in-top-fwd {
-    0% {
-        -webkit-transform: rotateX(-100deg);
-        transform: rotateX(-100deg);
-        -webkit-transform-origin: top;
-        transform-origin: top;
-        opacity: 0;
-    }
-
-    100% {
-        -webkit-transform: rotateX(0deg);
-        transform: rotateX(0deg);
-        -webkit-transform-origin: top;
-        transform-origin: top;
-        opacity: 1;
-    }
-}
 
 
 /* Vue Player */
@@ -755,42 +687,6 @@ i {
     position: initial;
 }
 
-@-webkit-keyframes swing-in-bottom-fwd {
-    0% {
-        -webkit-transform: rotateX(100deg);
-        transform: rotateX(100deg);
-        -webkit-transform-origin: bottom;
-        transform-origin: bottom;
-        opacity: 0;
-    }
-
-    100% {
-        -webkit-transform: rotateX(0);
-        transform: rotateX(0);
-        -webkit-transform-origin: bottom;
-        transform-origin: bottom;
-        opacity: 1;
-    }
-}
-
-@keyframes swing-in-bottom-fwd {
-    0% {
-        -webkit-transform: rotateX(100deg);
-        transform: rotateX(100deg);
-        -webkit-transform-origin: bottom;
-        transform-origin: bottom;
-        opacity: 0;
-    }
-
-    100% {
-        -webkit-transform: rotateX(0);
-        transform: rotateX(0);
-        -webkit-transform-origin: bottom;
-        transform-origin: bottom;
-        opacity: 1;
-    }
-}
-
 
 /* == Home == */
 .home-slider-block {
@@ -802,7 +698,7 @@ i {
     position: relative;
 
     .back-color {
-        background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(120, 50, 255, 1) 0%, rgba(50, 150, 250, 1) 91%);
+        background-image:linear-gradient(109.6deg, #4148cf 21.2%, #5061d8 73.1%);
         border-radius: 20px 20px 0 0;
 
     }
@@ -1155,31 +1051,36 @@ $cloud-bgColor: #fff;
 
     .plyr__volume {
         input {
-          width: 60px;
+            width: 60px;
         }
-      }
-      .plyr video {
+    }
+
+    .plyr video {
         width: 100%;
         min-height: 550px;
         border-radius: 20px;
         object-fit: cover;
-      }
-      .same-movies {
+    }
+
+    .same-movies {
         padding: 0 10px;
-      }
-     
-    .chat-video{
-      bottom: 7rem;
+    }
+
+    .chat-video {
+        bottom: 7rem;
         right: 2.2rem;
-        .mine .message.last:after{
-        background: #000;
+
+        .mine .message.last:after {
+            background: #000;
         }
-        .mine .message.last:before{
-           background-image:none;
+
+        .mine .message.last:before {
+            background-image: none;
             background-color: #393939;
         }
-         .mine .message{
-            background-image:none;
+
+        .mine .message {
+            background-image: none;
             background-color: #393939;
         }
     }
@@ -1424,86 +1325,6 @@ $cloud-bgColor: #fff;
     animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
-@-webkit-keyframes fade-in-fwd {
-    0% {
-        -webkit-transform: translateZ(-80px);
-        transform: translateZ(-80px);
-        opacity: 0;
-    }
-
-    100% {
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
-        opacity: 1;
-    }
-}
-
-@keyframes fade-in-fwd {
-    0% {
-        -webkit-transform: translateZ(-80px);
-        transform: translateZ(-80px);
-        opacity: 0;
-    }
-
-    100% {
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes fade-out-fwd {
-    0% {
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
-        opacity: 1;
-    }
-
-    100% {
-        -webkit-transform: translateZ(80px);
-        transform: translateZ(80px);
-        opacity: 0;
-    }
-}
-
-@keyframes fade-out-fwd {
-    0% {
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
-        opacity: 1;
-    }
-
-    100% {
-        -webkit-transform: translateZ(80px);
-        transform: translateZ(80px);
-        opacity: 0;
-    }
-}
-
-@-webkit-keyframes scale-up-center {
-    0% {
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5);
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-}
-
-@keyframes scale-up-center {
-    0% {
-        -webkit-transform: scale(0.5);
-        transform: scale(0.5);
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-}
-
 /*=== Generes === */
 
 .movies-genre {
@@ -1579,6 +1400,7 @@ $cloud-bgColor: #fff;
     width: 100%;
     overflow: hidden;
     background-color: #fff;
+    min-height: 700px;
 
     .genres {
         padding: 10px 0;
@@ -1596,34 +1418,6 @@ $cloud-bgColor: #fff;
                     content: "";
                 }
             }
-        }
-    }
-
-    @-webkit-keyframes fade-in-fwd {
-        0% {
-            -webkit-transform: translateZ(-80px);
-            transform: translateZ(-80px);
-            opacity: 0;
-        }
-
-        100% {
-            -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-            opacity: 1;
-        }
-    }
-
-    @keyframes fade-in-fwd {
-        0% {
-            -webkit-transform: translateZ(-80px);
-            transform: translateZ(-80px);
-            opacity: 0;
-        }
-
-        100% {
-            -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-            opacity: 1;
         }
     }
 
@@ -1760,13 +1554,15 @@ $cloud-bgColor: #fff;
             display: block;
             margin-bottom: 10px;
         }
-        button{
-            background-color:transparent;
-            border:none;
-            margin-left:1rem;
-            color:#45fffc;
-            &:hover{
-                color:#000;
+
+        button {
+            background-color: transparent;
+            border: none;
+            margin-left: 1rem;
+            color: #45fffc;
+
+            &:hover {
+                color: #000;
             }
         }
     }
